2006-10-08  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/unicode.sgml: Document GUnicodeType.

2006-10-08  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Add g_unichar_get_script() and
	GUnicodeScript.

	* glib/tmpl/unicode.sgml: Document GUnicodeScript

	* gobject/tmpl/enumerations_flags.sgml: Add a hint about
	the requirement that enum and flags values must be static.

2006-10-01  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/option.sgml: Improve example.  (#367625, Ross Burton) 

Mon Sep 11 14:57:46 2006  Tim Janik  <timj@imendio.com>

	* glib/running.sgml: documented G_DEBUG flags resident-modules
	and bind-now-modules, patch by Christian Persch on bug #345099.

2006-09-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Add new functions

2006-08-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/compiling.sgml: Add a note about G_DISABLE_DEPRECATED.
	(#353172, Matt Barnes)

Wed Aug 16 13:55:39 2006  Tim Janik  <timj@imendio.com>

	* glib/tmpl/trash_stack.sgml: added notes about complexity.

2006-08-15  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.2 ===

2006-08-10  Josh Parsons  <josh.parsons@stonebow.otago.ac.nz>

	* gobject/tmpl/gtype.sgml:
	* glib/tmpl/threads.sgml: Style and grammar fixes.

2006-08-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/messages.sgml: Add some hints
	about making warnings fatal.  (#348785, Matt
	Barnes)

2006-07-22  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.1 ===

2006-07-20  Tor Lillqvist  <tml@novell.com>

	* glib/tmpl/date.sgml: Improve doc for
	g_date_strftime(). (#346197)

2006-07-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/base64.sgml: Remove bogus reference
	to nonexisting function.  (#346660, Mark Drago)
	
2006-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.0 ===

2006-06-20  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.11.4 ===

2006-06-12  Matthias Clasen  <mclasen@redhat.com>
