@@ -1,3 +1,9 @@
+2006-12-13  Matthias Clasen  <mclasen@redhat.com>
+
+        * gmodule.c (g_module_open):
+        * gmodule-dl.c (_g_module_symbol): Handle valid symbols
+        that are NULL correctly.  (#385388, Felix Kater)
+
 Mon Sep 11 14:58:56 2006  Tim Janik  <timj@imendio.com>
 
 	* gmodule.c: applied patch from Christian Persch to support
